src/main/java/com/myerlang/erlapi/gen/ErlangParser.java
// Generated from C:/Users/gabri/Desktop/final_lenguajes/erlapi/src/main/java/com/myerlang/erlapi/grammar\Erlang.g4 by ANTLR 4.8
package com.myerlang.erlapi.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ErlangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, TokAtom=64, TokVar=65, TokFloat=66, 
		TokInteger=67, TokChar=68, TokString=69, AttrName=70, Comment=71, WS=72;
	public static final int
		RULE_forms = 0, RULE_form = 1, RULE_tokAtom = 2, RULE_tokVar = 3, RULE_tokFloat = 4, 
		RULE_tokInteger = 5, RULE_tokChar = 6, RULE_tokString = 7, RULE_attribute = 8, 
		RULE_typeSpec = 9, RULE_specFun = 10, RULE_typedAttrVal = 11, RULE_typedRecordFields = 12, 
		RULE_typedExprs = 13, RULE_typedExpr = 14, RULE_typeSigs = 15, RULE_typeSig = 16, 
		RULE_typeGuards = 17, RULE_typeGuard = 18, RULE_topTypes = 19, RULE_topType = 20, 
		RULE_topType100 = 21, RULE_type200 = 22, RULE_type300 = 23, RULE_type400 = 24, 
		RULE_type500 = 25, RULE_type = 26, RULE_funType100 = 27, RULE_funType = 28, 
		RULE_fieldTypes = 29, RULE_fieldType = 30, RULE_binaryType = 31, RULE_binBaseType = 32, 
		RULE_binUnitType = 33, RULE_attrVal = 34, RULE_function = 35, RULE_functionClause = 36, 
		RULE_clauseArgs = 37, RULE_clauseGuard = 38, RULE_clauseBody = 39, RULE_expr = 40, 
		RULE_expr100 = 41, RULE_expr150 = 42, RULE_expr160 = 43, RULE_expr200 = 44, 
		RULE_expr300 = 45, RULE_expr400 = 46, RULE_expr500 = 47, RULE_expr600 = 48, 
		RULE_expr700 = 49, RULE_expr800 = 50, RULE_exprMax = 51, RULE_list = 52, 
		RULE_tail = 53, RULE_binary = 54, RULE_binElements = 55, RULE_binElement = 56, 
		RULE_bitExpr = 57, RULE_optBitSizeExpr = 58, RULE_optBitTypeList = 59, 
		RULE_bitTypeList = 60, RULE_bitType = 61, RULE_bitSizeExpr = 62, RULE_listComprehension = 63, 
		RULE_binaryComprehension = 64, RULE_lcExprs = 65, RULE_lcExpr = 66, RULE_tuple = 67, 
		RULE_recordExpr = 68, RULE_recordTuple = 69, RULE_recordFields = 70, RULE_recordField = 71, 
		RULE_functionCall = 72, RULE_ifExpr = 73, RULE_ifClauses = 74, RULE_ifClause = 75, 
		RULE_caseExpr = 76, RULE_crClauses = 77, RULE_crClause = 78, RULE_receiveExpr = 79, 
		RULE_funExpr = 80, RULE_atomOrVar = 81, RULE_integerOrVar = 82, RULE_funClauses = 83, 
		RULE_funClause = 84, RULE_tryExpr = 85, RULE_tryCatch = 86, RULE_tryClauses = 87, 
		RULE_tryClause = 88, RULE_argumentList = 89, RULE_exprs = 90, RULE_guard = 91, 
		RULE_atomic = 92, RULE_prefixOp = 93, RULE_multOp = 94, RULE_addOp = 95, 
		RULE_listOp = 96, RULE_compOp = 97, RULE_ruleClauses = 98, RULE_ruleClause = 99, 
		RULE_ruleBody = 100;
	private static String[] makeRuleNames() {
		return new String[] {
			"forms", "form", "tokAtom", "tokVar", "tokFloat", "tokInteger", "tokChar", 
			"tokString", "attribute", "typeSpec", "specFun", "typedAttrVal", "typedRecordFields", 
			"typedExprs", "typedExpr", "typeSigs", "typeSig", "typeGuards", "typeGuard", 
			"topTypes", "topType", "topType100", "type200", "type300", "type400", 
			"type500", "type", "funType100", "funType", "fieldTypes", "fieldType", 
			"binaryType", "binBaseType", "binUnitType", "attrVal", "function", "functionClause", 
			"clauseArgs", "clauseGuard", "clauseBody", "expr", "expr100", "expr150", 
			"expr160", "expr200", "expr300", "expr400", "expr500", "expr600", "expr700", 
			"expr800", "exprMax", "list", "tail", "binary", "binElements", "binElement", 
			"bitExpr", "optBitSizeExpr", "optBitTypeList", "bitTypeList", "bitType", 
			"bitSizeExpr", "listComprehension", "binaryComprehension", "lcExprs", 
			"lcExpr", "tuple", "recordExpr", "recordTuple", "recordFields", "recordField", 
			"functionCall", "ifExpr", "ifClauses", "ifClause", "caseExpr", "crClauses", 
			"crClause", "receiveExpr", "funExpr", "atomOrVar", "integerOrVar", "funClauses", 
			"funClause", "tryExpr", "tryCatch", "tryClauses", "tryClause", "argumentList", 
			"exprs", "guard", "atomic", "prefixOp", "multOp", "addOp", "listOp", 
			"compOp", "ruleClauses", "ruleClause", "ruleBody"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'-'", "'('", "')'", "':'", "'/'", "'::'", "','", "'{'", 
			"'}'", "';'", "'when'", "'|'", "'..'", "'['", "']'", "'...'", "'#'", 
			"'fun'", "'->'", "'<<'", "'>>'", "'*'", "'catch'", "'='", "'!'", "'orelse'", 
			"'andalso'", "'begin'", "'end'", "'||'", "'<-'", "'<='", "'if'", "'case'", 
			"'of'", "'receive'", "'after'", "'try'", "'+'", "'bnot'", "'not'", "'div'", 
			"'rem'", "'band'", "'and'", "'bor'", "'bxor'", "'bsl'", "'bsr'", "'or'", 
			"'xor'", "'++'", "'--'", "'=='", "'/='", "'=<'", "'<'", "'>='", "'>'", 
			"'=:='", "'=/='", "':-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "TokAtom", "TokVar", "TokFloat", "TokInteger", 
			"TokChar", "TokString", "AttrName", "Comment", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Erlang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ErlangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FormsContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ErlangParser.EOF, 0); }
		public List<FormContext> form() {
			return getRuleContexts(FormContext.class);
		}
		public FormContext form(int i) {
			return getRuleContext(FormContext.class,i);
		}
		public FormsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forms; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterForms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitForms(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ErlangVisitor ) return ((ErlangVisitor<? extends T>)visitor).visitForms(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormsContext forms() throws RecognitionException {
		FormsContext _localctx = new FormsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_forms);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(202);
				form();
				}
				}
				setState(205); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__1 || _la==TokAtom || _la==AttrName );
			setState(207);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormContext extends ParserRuleContext {
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public RuleClausesContext ruleClauses() {
			return getRuleContext(RuleClausesContext.class,0);
		}
		public FormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_form; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitForm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ErlangVisitor ) return ((ErlangVisitor<? extends T>)visitor).visitForm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormContext form() throws RecognitionException {
		FormContext _localctx = new FormContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_form);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(212);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(209);
				attribute();
				}
				break;
			case 2:
				{
				setState(210);
				function();
				}
				break;
			case 3:
				{
				setState(211);
				ruleClauses();
				}
				break;
			}
			setState(214);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokAtomContext extends ParserRuleContext {
		public TerminalNode TokAtom() { return getToken(ErlangParser.TokAtom, 0); }
		public TokAtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokAtom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterTokAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitTokAtom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ErlangVisitor ) return ((ErlangVisitor<? extends T>)visitor).visitTokAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TokAtomContext tokAtom() throws RecognitionException {
		TokAtomContext _localctx = new TokAtomContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tokAtom);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(216);
			match(TokAtom);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokVarContext extends ParserRuleContext {
		public TerminalNode TokVar() { return getToken(ErlangParser.TokVar, 0); }
		public TokVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterTokVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitTokVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ErlangVisitor ) return ((ErlangVisitor<? extends T>)visitor).visitTokVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TokVarContext tokVar() throws RecognitionException {
		TokVarContext _localctx = new TokVarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tokVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(218);
			match(TokVar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokFloatContext extends ParserRuleContext {
		public TerminalNode TokFloat() { return getToken(ErlangParser.TokFloat, 0); }
		public TokFloatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokFloat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterTokFloat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitTokFloat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ErlangVisitor ) return ((ErlangVisitor<? extends T>)visitor).visitTokFloat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TokFloatContext tokFloat() throws RecognitionException {
		TokFloatContext _localctx = new TokFloatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tokFloat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(220);
			match(TokFloat);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokIntegerContext extends ParserRuleContext {
		public TerminalNode TokInteger() { return getToken(ErlangParser.TokInteger, 0); }
		public TokIntegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokInteger; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterTokInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitTokInteger(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ErlangVisitor ) return ((ErlangVisitor<? extends T>)visitor).visitTokInteger(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TokIntegerContext tokInteger() throws RecognitionException {
		TokIntegerContext _localctx = new TokIntegerContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tokInteger);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(222);
			match(TokInteger);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokCharContext extends ParserRuleContext {
		public TerminalNode TokChar() { return getToken(ErlangParser.TokChar, 0); }
		public TokCharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokChar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterTokChar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitTokChar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ErlangVisitor ) return ((ErlangVisitor<? extends T>)visitor).visitTokChar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TokCharContext tokChar() throws RecognitionException {
		TokCharContext _localctx = new TokCharContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tokChar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(224);
			match(TokChar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokStringContext extends ParserRuleContext {
		public TerminalNode TokString() { return getToken(ErlangParser.TokString, 0); }
		public TokStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokString; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterTokString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitTokString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ErlangVisitor ) return ((ErlangVisitor<? extends T>)visitor).visitTokString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TokStringContext tokString() throws RecognitionException {
		TokStringContext _localctx = new TokStringContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tokString);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(226);
			match(TokString);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public TokAtomContext tokAtom() {
			return getRuleContext(TokAtomContext.class,0);
		}
		public AttrValContext attrVal() {
			return getRuleContext(AttrValContext.class,0);
		}
		public TypedAttrValContext typedAttrVal() {
			return getRuleContext(TypedAttrValContext.class,0);
		}
		public TerminalNode AttrName() { return getToken(ErlangParser.AttrName, 0); }
		public TypeSpecContext typeSpec() {
			return getRuleContext(TypeSpecContext.class,0);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ErlangVisitor ) return ((ErlangVisitor<? extends T>)visitor).visitAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_attribute);
		try {
			setState(244);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(228);
				match(T__1);
				setState(229);
				tokAtom();
				setState(230);
				attrVal();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(232);
				match(T__1);
				setState(233);
				tokAtom();
				setState(234);
				typedAttrVal();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(236);
				match(T__1);
				setState(237);
				tokAtom();
				setState(238);
				match(T__2);
				setState(239);
				typedAttrVal();
				setState(240);
				match(T__3);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(242);
				match(AttrName);
				setState(243);
				typeSpec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeSpecContext extends ParserRuleContext {
		public SpecFunContext specFun() {
			return getRuleContext(SpecFunContext.class,0);
		}
		public TypeSigsContext typeSigs() {
			return getRuleContext(TypeSigsContext.class,0);
		}
		public TypeSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).enterTypeSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ErlangListener ) ((ErlangListener)listener).exitTypeSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ErlangVisitor ) return ((ErlangVisitor<? extends T>)visitor).visitTypeSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeSpecContext typeSpec() throws RecognitionException {
		TypeSpecContext _localctx = new TypeSpecContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_typeSpec);
		try {
			setState(254);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TokAtom:
				enterOuterAlt(_localctx, 1);
				{
				setState(246);
				specFun();
				setState(247);
				typeSigs();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(249);
				match(T__2);
				setState(250);
				specFun();
				setState(251);
				typeSigs();
				setState(252);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
